# Medkit

./: CMakeLists.txt  README.md  medkit.c  medkit.h
examples/: cplusplus.cc  detours.c  dump-executable.c  dump-processes.c
misc/: amalgamate.py  elf-inspect-self.c
